# videoanalysis

./: .gitignore  CMakeLists.txt
calibrate/: CMakeLists.txt
calibrate/src/: main.cpp
calibratetext/: CMakeLists.txt
calibratetext/src/: main.cpp
simple_decoder/: CMakeLists.txt
simple_decoder/src/: main.cpp
text_decoder/: CMakeLists.txt
text_decoder/src/: main.cpp
text_decoder2/: CMakeLists.txt
text_decoder2/src/: main.cpp
